# pubsub

./: .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-quality.txt  requirements.txt
diagrams/: arquitetura-pubsub-subs.puml  arquitetura.puml  sequencia.puml
src/: publisher.py  pubsub.py  subscriber.py
